--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,20 @@
-*{
+:root{
+    --primary-color: rgb(0, 19, 48);
+    --secondary-color: #0d6efd;
+}
 
+*{
+    font-family: "Montserrat", sans-serif;
+}
+
+.primary-color{
+    color: var(--primary-color);
+}
+
+.secondary-color{
+    color: var(--secondary-color);
+}
+
+.primary-border{
+    border: 1px solid var(--primary-color);
 }
