--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,14 +7,36 @@
     font-family: "Montserrat", sans-serif;
 }
 
+.btn-primary{
+    --bs-btn-bg: rgb(0, 19, 48) !important;
+    --bs-btn-hover-bg: rgba(0, 19, 48, 0.7) !important;
+}
+
 .primary-color{
-    color: var(--primary-color);
+    color: var(--primary-color) !important;
 }
 
 .secondary-color{
-    color: var(--secondary-color);
+    color: var(--secondary-color) !important;
 }
 
 .primary-border{
-    border: 1px solid var(--primary-color);
+    border: 1px solid var(--primary-color) !important;
+}
+
+.login-form {
+    width: 100%;
+    max-width: 400px;
+    padding: 15px;
+    margin: auto;
+}
+.vertical-center {
+    min-height: 100vh; /* 100% of the viewport height */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#logo{
+    width: 100px;
 }
