Huge update in dashboard

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,10 +19,32 @@
     border-radius: 0.6rem !important;
 }
 
+#loading-scheme{
+    position: absolute;
+    width: 100%;
+    bottom: -7px;
+    left: 0;
+    right: 0;
+    z-index: -1;
+}
+
+#dashboard{
+    margin-top: 100px;
+}
+
 .btn-primary{
     --bs-btn-bg: rgb(0, 19, 48) !important;
-    --bs-btn-hover-bg: rgba(0, 19, 48, 0.7) !important;
+    --bs-btn-hover-bg: rgba(56, 174, 204, 0.7) !important;
     --bs-btn-disabled-bg: rgba(0, 19, 48, 0.7) !important;
+    --bs-btn-border-color: white !important;
+    --bs-btn-hover-border-color: white !important;
+    --bs-btn-active-bg: rgba(4, 110, 143, 0.7) !important;
+    --bs-btn-active-border-color: white !important;
+    --bs-btn-disabled-border-color: white !important;
+}
+
+.bg-primary{
+    --bs-primary-rgb: 0, 19, 48 !important;
 }
 
 /* .gradient{
@@ -64,6 +86,10 @@
 
 #logo{
     width: 100px;
+}
+
+#logo-header{
+    width: 60%;
 }
 
 #bgVideo {
