--- a/public/css/main.css
+++ b/public/css/main.css
@@ -57,16 +57,14 @@
 }
 
 .image-container {
-    max-width: 150px;
-    max-height: 150px;
+    width: 80px;
+    height: 80px;
     border-radius: 50%;
     overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
-
 
 .image-container img {
     width: auto;
