--- a/public/css/main.css
+++ b/public/css/main.css
@@ -66,6 +66,34 @@
     align-items: center;
 }
 
+.img-container {
+    width: 50%;
+    height: 150px;
+    border-radius: 2%;
+    overflow: hidden;
+    object-position: 50% 50%; 
+    object-fit: cover !important;
+}
+
+.produkt-img{
+    width: 100%;
+    height: 100%;
+    object-position: 50% 50%; 
+    object-fit: cover !important;
+}
+
+.fs-big{
+    font-size: 7.5rem !important;
+}
+
+.container-margin{
+    margin-top: 100px;
+}
+
+.card{
+    z-index: 0 !important;
+}
+
 .bg-primary-2{
     background-color: var(--primary-color) !important;
 }
