--- a/public/css/main.css
+++ b/public/css/main.css
@@ -75,6 +75,17 @@
     object-fit: cover !important;
 }
 
+.img-container2 {
+    width: 100%;
+    height: 80%;
+    max-height: 500px;
+    border-radius: 2%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .produkt-img{
     height: 100%;
     object-position: 50% 50%; 
